# GodotJS-Dependencies

./: LICENSE  README.md  v8.android_arm32.args.gn  v8.android_arm64.args.gn  v8.android_arm64_v8a.args.gn  v8.android_armv8.args.gn  v8.android_x86_64.args.gn  v8.ios_arm64.args.gn  v8.ios_x86_64.args.gn  v8.linux_arm64.args.gn  v8.linux_x86_64.args.gn  v8.macos_arm64.args.gn  v8.macos_x86_64.args.gn  v8.windows_arm64.args.gn  v8.windows_x64.args.gn
.github/workflows/: build_lws_linux_x64.yml  build_test.yml  build_v8.yml  build_v8_android_arm64-v8a.yml  build_v8_android_arm64.yml  build_v8_android_armv8.yml  build_v8_ios_arm64.yml  build_v8_ios_x86_64.yml  build_v8_linux_arm64.yml  build_v8_linux_x64.yml  build_v8_linux_x86_64.yml  build_v8_macos_arm64.yml  build_v8_windows_arm64.yml  build_v8_windows_x64.yml
