# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.

is_component_build = false
is_debug = false
target_cpu = "arm64"
target_os = "win"
v8_enable_i18n_support = false
v8_monolithic = true
v8_use_external_startup_data = false
v8_enable_pointer_compression = true
v8_jitless = false                  # jit enabled

use_custom_libcxx = false           # false will produce warnings
treat_warnings_as_errors = false    # 
v8_symbol_level = 0                 # smaller lib 
v8_enable_sandbox = false 
